client_app/src/styles/_eventLine.scss
.event_line_view {
    display: inline-block;
    // margin-top: 15px;
    height: 100px;
    width: 100%;
    padding-left: 80px;
    padding-top: 10px;
}

.event_line_svg {
    //  display: inline;
}

.accent {
    color: #b5c0d1;
    opacity: .8;
    font-size: 9px;
}

.checkDiv div {
    display: block;
    padding-top: 10px;
}

.event_label {
    height: 20px;
    width: 80px;
}

.event_label rect {
    height: 24px;
    width: 80px;
    fill: #808B96;
}

.event_label text {
    font-size: 10px;
    fill: white;
}

.selected-event rect {
    fill: #E67E22;
    opacity: .8;
}

.event-buttons {
    width: 700px;
    height: 25px;
    display: inline;
    float: left;
}

.event-buttons div {
    display: inline;
    float: left;
    margin-right: 2px;
    padding-top: 5px;
}

.branch-wrapper svg {
    width: 700px;
    height: 50px;
}

